--- a/FilmStock/es.lproj/Localizable.strings
+++ b/FilmStock/es.lproj/Localizable.strings
@@ -45,8 +45,10 @@
 "film.quantity" = "Cantidad";
 "film.expiryDate" = "Fecha de caducidad";
 "film.comments" = "Comentarios";
+"film.comments.placeholder" = "Add a note about this roll…";
 "film.isFrozen" = "La película está congelada";
 "film.frozen" = "CONGELADO";
+"film.expired" = "CADUCADO";
 "film.filmInformation" = "Información de la película";
 "film.filmReminder" = "Recordatorio de película";
 "film.addExpiryDate" = "Añadir fecha de caducidad";
@@ -261,6 +263,33 @@
 "error.invalidDate" = "Formato de fecha inválido";
 "error.invalidDateFormat" = "La fecha debe ser AAAA o MM/AAAA";
 
+// MARK: - Exposures
+"film.exposures" = "Exposures";
+"add.rolls" = "Añadir rollos";
+"loaded.detail.title" = "Roll Details";
+"loaded.detail.rollSection" = "In Camera";
+"loaded.detail.filmSection" = "Film Properties";
+"loaded.detail.loadedDate" = "Loaded";
+"loaded.detail.daysOnCamera" = "On Camera";
+"loaded.detail.today" = "Today";
+"loaded.detail.day" = "%d day";
+"loaded.detail.days" = "%d days";
+"loaded.detail.frozen" = "Frozen";
+"finished.detail.title" = "Finished Roll";
+"finished.detail.finishedDate" = "Finished";
+"finished.detail.daysOnRoll" = "Days on Roll";
+"add.rolls.section" = "Rollos";
+"add.rolls.hint" = "Añade al menos un rollo para guardar esta película.";
+"film.exposures.unspecified" = "Unspecified";
+"film.exposures.custom" = "Custom";
+"film.exposures.customCount" = "Number of exposures";
+"edit.rolls.title" = "Editar rollos %@";
+"film.noExpiry" = "No expiry date";
+"load.selectRoll" = "Select Roll";
+"search.noResults" = "No Results";
+"search.noResults.description" = "Try adjusting your search or filters.";
+"finished.status" = "Status";
+
 // MARK: - Load Film
 "load.title" = "Cargar película";
 "load.selectCamera" = "Seleccionar cámara";
@@ -305,6 +334,8 @@
 // MARK: - Film Detail
 "detail.information" = "Información de la película";
 "detail.formats" = "Formatos";
+"detail.sheets" = "Películas de Plancha";
+"detail.other" = "Otros";
 "detail.otherFormats" = "Otros formatos";
 "detail.noFormats" = "No hay formatos disponibles";
 "detail.loadedAt" = "Cargada";
