--- a/FilmStock/no.lproj/Localizable.strings
+++ b/FilmStock/no.lproj/Localizable.strings
@@ -45,8 +45,10 @@
 "film.quantity" = "Antall";
 "film.expiryDate" = "Utløpsdato";
 "film.comments" = "Kommentarer";
+"film.comments.placeholder" = "Add a note about this roll…";
 "film.isFrozen" = "Filmen er frossen";
 "film.frozen" = "FROSSEN";
+"film.expired" = "UTGÅTT";
 "film.filmInformation" = "Filminformasjon";
 "film.filmReminder" = "Filmpåminnelse";
 "film.addExpiryDate" = "Legg til utløpsdato";
@@ -261,6 +263,33 @@
 "error.invalidDate" = "Ugyldig datoformat";
 "error.invalidDateFormat" = "Dato må være ÅÅÅÅ eller MM/ÅÅÅÅ";
 
+// MARK: - Exposures
+"film.exposures" = "Exposures";
+"add.rolls" = "Legg til ruller";
+"loaded.detail.title" = "Roll Details";
+"loaded.detail.rollSection" = "In Camera";
+"loaded.detail.filmSection" = "Film Properties";
+"loaded.detail.loadedDate" = "Loaded";
+"loaded.detail.daysOnCamera" = "On Camera";
+"loaded.detail.today" = "Today";
+"loaded.detail.day" = "%d day";
+"loaded.detail.days" = "%d days";
+"loaded.detail.frozen" = "Frozen";
+"finished.detail.title" = "Finished Roll";
+"finished.detail.finishedDate" = "Finished";
+"finished.detail.daysOnRoll" = "Days on Roll";
+"add.rolls.section" = "Ruller";
+"add.rolls.hint" = "Legg til minst én rulle for å lagre denne filmen.";
+"film.exposures.unspecified" = "Unspecified";
+"film.exposures.custom" = "Custom";
+"film.exposures.customCount" = "Number of exposures";
+"edit.rolls.title" = "Rediger %@-ruller";
+"film.noExpiry" = "No expiry date";
+"load.selectRoll" = "Select Roll";
+"search.noResults" = "No Results";
+"search.noResults.description" = "Try adjusting your search or filters.";
+"finished.status" = "Status";
+
 // MARK: - Load Film
 "load.title" = "Legg inn film";
 "load.selectCamera" = "Velg kamera";
@@ -305,6 +334,8 @@
 // MARK: - Film Detail
 "detail.information" = "Filminformasjon";
 "detail.formats" = "Formater";
+"detail.sheets" = "Planfilm";
+"detail.other" = "Andre";
 "detail.otherFormats" = "Andre formater";
 "detail.noFormats" = "Ingen formater tilgjengelig";
 "detail.loadedAt" = "Innlagt";
