small fixes and fixed #95 - search in the catalog.

--- a/FilmStock/de.lproj/Localizable.strings
+++ b/FilmStock/de.lproj/Localizable.strings
@@ -394,3 +394,5 @@
 "empty.noFinishedFilms.title" = "Keine fertigen Rollen";
 "empty.noFinishedFilms.message" = "Entladene Rollen werden hier angezeigt.";
 
+
+"image.search.prompt" = "Filme suchen…";
