--- a/FilmStock/es.lproj/Localizable.strings
+++ b/FilmStock/es.lproj/Localizable.strings
@@ -395,3 +395,5 @@
 "empty.noFinishedFilms.message" = "Los rollos descargados aparecerán aquí.";
 
 
+
+"image.search.prompt" = "Buscar películas…";
